Fix z-index css property on main #content element

--- a/assets/stylesheets/sidebar_hide.css
+++ b/assets/stylesheets/sidebar_hide.css
@@ -26,6 +26,7 @@
 
 #content {
   position: relative;
+  z-index:0;
 }
 
 #sidebar {
